# glic

./: .pre-commit-hooks.yaml  glic.py  pyproject.toml
