# gcca
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "glic"
description = "license header formatter"
version = "0.0.1"
requires-python = ">=3.9"
authors = [
    { name = "Cristhian Gonzales", email = "gcca@gcca.tk" }
]
dependencies = ["PyYAML==6.0"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.setuptools]
py-modules = ["glic"]

[project.urls]
homepage = "https://github.com/gcca/glic"
repository = "https://github.com/gcca/glic"

[project.scripts]
glic = "glic:main"
